# wim-strutils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wim-strutils.pc.in
include/: strutils.hpp
src/: strutils.cpp  strutils_test.cpp
